objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalContributed__c</fullName>
        <description>Amount of money already contributed by the members as of now...</description>
        <label>TotalContributed</label>
        <summarizedField>ExpenseMemberAssociation__c.ContributionAmount__c</summarizedField>
        <summaryForeignKey>ExpenseMemberAssociation__c.ExpenseID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>EventID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contribution_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>TotalContributed__c &gt;  Amount__c</errorConditionFormula>
        <errorMessage>Contribute money should not exceed total Expense Amount</errorMessage>
    </validationRules>
</CustomObject>